feat(iframe): 添加iframe元素支持及交互模板预览功能
实现iframe元素的基础组件和预览功能
- 新增BaseIframeElement组件处理iframe渲染和沙箱配置
- 在编辑器和缩略图中添加iframe元素支持
- 为缩略图添加专门的iframe预览模式
- 隐藏iframe滚动条提升视觉体验
- 扩展slides类型定义支持iframe相关配置

--- a/public/interactive-quiz.html
+++ b/public/interactive-quiz.html
@@ -11,6 +11,18 @@
             box-sizing: border-box;
         }
 
+        /* 隐藏滚动条 */
+        html, body {
+            overflow: hidden;
+            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none; /* IE and Edge */
+        }
+        
+        html::-webkit-scrollbar,
+        body::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Opera */
+        }
+
         body {
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #FFB347, #FFCC5C);
